k8s/overlays/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scw-test
  name: scw-test
  namespace: default
spec:
  selector:
    app: scw-test
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
