k8s/overlays/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scw-test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  namespace: default
spec:
  tls:
    - hosts:
        - https://24bba794-f712-4fb6-92a3-649ad4b9a2b3.api.k8s.fr-par.scw.cloud:6443
      secretName: default-token-p7vdn
  rules:
    - host: https://24bba794-f712-4fb6-92a3-649ad4b9a2b3.api.k8s.fr-par.scw.cloud:6443
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scwtest
                port:
                  number: 80
